2004-01-26  Sven Neumann  <sven@gimp.org>
	* app/tools/gimpcurvestool.c
	* app/widgets/gimphistogramview.c: use dark_gc instead of
	text_aa_gc to draw the histogram and curves grid lines. dark_gc is
	slightly lighter, looks better and fixes bug #132565.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12169 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-26  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpcurvestool.c
+	* app/widgets/gimphistogramview.c: use dark_gc instead of
+	text_aa_gc to draw the histogram and curves grid lines. dark_gc is
+	slightly lighter, looks better and fixes bug #132565.
+
 2004-01-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage.[ch]: removed gimp_image_owns_item() again.
