--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-26  Simon Budig  <simon@gimp.org>
+
+	* app/core/gimpscanconvert.c: use the modern libart way
+	to uncross/rewind a libart SVP. This time really fixes
+	bug #132036 (please test it though...).
+
 2004-01-26  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplayshell-selection.c: don't draw the
