--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-26 Alastair McKinstry <mckinstry@computer.org>
+
+	* ga.po: Updaed Itish translation.
+
 2004-01-26  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
