--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-26  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/image-menu.c (image_menu_entries): use
+	GIMP_STOCK_FLOATING_SELECTION for "Select->Float".
+
+	(image_menu_update): set "Layer->Merge Down" insensitive for the
+	bottom layer.
+
 2004-01-26  Simon Budig  <simon@gimp.org>
 
 	* app/core/gimpscanconvert.c: use the modern libart way
