2004-01-27  Jakub Steiner <jimmac@ximian.com>
* themes/Default/images/stock-layer-mask-32.png
* themes/Default/images/stock-layer-mask-48.png: replaced the
  placeholders


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12177 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-27  Jakub Steiner <jimmac@ximian.com>
+
+	* themes/Default/images/stock-layer-mask-32.png
+	* themes/Default/images/stock-layer-mask-48.png: replaced the
+	  placeholders
+
 2004-01-27  Michael Natterer  <mitch@gimp.org>
 
 	* themes/Default/images/Makefile.am
