2004-01-26  Manish Singh  <yosh@gimp.org>
        * gimp-zip.in: use new versioning defines.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12179 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-26  Manish Singh  <yosh@gimp.org>
 
+	* gimp-zip.in: use new versioning defines.
+
+2004-01-26  Manish Singh  <yosh@gimp.org>
+
 	* configure.in: add m4_defines for gimp_unstable and gimp_full_name,
 	and define a GIMP_VISIBLE_NAME based on that.
 
