--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-27 Marco Ciampa <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-01-24  Jan Morén  <jan.moren@lucs.lu.se>
 
         * sv.po: Updated Swedish translation.
