--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-01-27  Michael Natterer  <mitch@gimp.org>
 
+	* app/display/gimpdisplayshell-title.c
+	(gimp_display_shell_format_title): added '%P' which expands to the
+	PDB id of the active drawable. Moved local variables to local
+	scopes where they are needed.
+
+	* app/config/gimpconfig-dump.c: document it.
+
+2004-01-27  Michael Natterer  <mitch@gimp.org>
+
 	* app/display/gimpdisplayshell-dnd.c: some cleanup.
 
 	(gimp_display_shell_bucket_fill): don't use the bucket fill
