--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-27  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/comic-logo.scm: applied a patch from
+	Pedro Gimeno to make the logo behave more like it used to in 1.2
+	(bug #132493).
+
 2004-01-27  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-title.c
