2004-01-27  Michael Natterer  <mitch@gimp.org>
	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-channel-indexed-16.png
	* themes/Default/images/stock-channel-indexed-24.png
	* themes/Default/images/stock-channel-indexed-32.png
	* themes/Default/images/stock-channel-indexed-48.png
	* libgimpwidgets/gimpstock.[ch]: added placeholders for an INDEXED
	channel icon (copied from the GRAY channel icon). To be replaced...

	* app/widgets/gimppreviewrendererimage.c: use
	GIMP_STOCK_CHANNEL_INDEXED instead of GIMP_STOCK_QUESTION for the
	indexed channel.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12184 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-01-27  Michael Natterer  <mitch@gimp.org>
+
+	* themes/Default/images/Makefile.am
+	* themes/Default/images/stock-channel-indexed-16.png
+	* themes/Default/images/stock-channel-indexed-24.png
+	* themes/Default/images/stock-channel-indexed-32.png
+	* themes/Default/images/stock-channel-indexed-48.png
+	* libgimpwidgets/gimpstock.[ch]: added placeholders for an INDEXED
+	channel icon (copied from the GRAY channel icon). To be replaced...
+
+	* app/widgets/gimppreviewrendererimage.c: use
+	GIMP_STOCK_CHANNEL_INDEXED instead of GIMP_STOCK_QUESTION for the
+	indexed channel.
+
 2004-01-27  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/scripts/comic-logo.scm: applied a patch from
