2004-01-27  Michael Natterer  <mitch@gimp.org>
	Re-enabled filling the whole selection using the bucket fill
	tool. Fixes bug #132649.

	* app/tools/gimpbucketfilloptions.[ch]: added boolean property
	"fill-selection" and a GUI for it.

	* app/tools/gimpbucketfilltool.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12186 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-01-27  Michael Natterer  <mitch@gimp.org>
 
+	Re-enabled filling the whole selection using the bucket fill
+	tool. Fixes bug #132649.
+
+	* app/tools/gimpbucketfilloptions.[ch]: added boolean property
+	"fill-selection" and a GUI for it.
+
+	* app/tools/gimpbucketfilltool.c: changed accordingly.
+
+2004-01-27  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/image-menu.c (image_menu_entries)
 	* app/gui/layers-menu.c (layers_menu_entries): use the new
 	GIMP_STOCK_LAYER_MASK icons for "Add Layer Mask".
