--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-27  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpstock.sgml: added the new icons.
+
 2004-01-20  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/tmpl/gimphelp.sgml: updated.
