--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-27  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Updated Slovak translation by Zdenko Podobny.
+
 2004-01-25  Sven Neumann  <sven@gimp.org>
 
 	* gimp-tips.xml.in: applied patch from Shlomi Fish that fixes a
