--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-27  Jakub Steiner <jimmac@ximian.com>
+
+	* themes/Default/images/stock-channel-indexed-16.png
+	* themes/Default/images/stock-channel-indexed-24.png
+	* themes/Default/images/stock-channel-indexed-32.png
+	* themes/Default/images/stock-channel-indexed-48.png: replacing
+	  placeholders
+	
 2004-01-27  Michael Natterer  <mitch@gimp.org>
 
 	Re-enabled filling the whole selection using the bucket fill
