2004-01-27  Michael Natterer  <mitch@gimp.org>
	* app/gui/layers-commands.c (layers_add_mask_query): use the
	new GIMP_STOCK_LAYER_MASK icon for "Add Layer Mask" dialog.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12194 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-27  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/layers-commands.c (layers_add_mask_query): use the
+	new GIMP_STOCK_LAYER_MASK icon for "Add Layer Mask" dialog.
+
 2004-01-27  Jakub Steiner <jimmac@ximian.com>
 
 	* themes/Default/images/stock-channel-indexed-16.png
